--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VideoCollection">
+        <activity android:name=".AddLineActivity"></activity>
+        <activity android:name=".AddApplyActivity" />
+        <activity
+            android:name=".SwitchView_dialog"
+            android:theme="@android:style/Theme.Holo.Dialog" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
