--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VideoCollection">
-        <activity android:name=".AddLineActivity"></activity>
+        <activity android:name=".LookLineActivity"></activity>
+        <activity android:name=".AddLineActivity" />
         <activity android:name=".AddApplyActivity" />
         <activity
             android:name=".SwitchView_dialog"
